# slipbox

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.org  broken-id-mapping.txt  manifest.scm  setup-dev.sh  setupfile.org  slipbox.toml
.claude/: settings.json
bibliography/: iclr-oa.bib  iclr.bib  icml-oa.bib  icml.bib  neurips-oa.bib  neurips.bib  neurosymbolic-oa.bib  neurosymbolic.bib
mgmt/: ARCHITECTURE.md  CONVENTIONS.md  README.md  tag-tracker.sh
mgmt/validator/: ARCHITECTURE.md  README.md  TODO.md  fix-broken-links.py  pyproject.toml
mgmt/validator/tests/: test_external_validator.py  test_link_validator.py  test_parser.py  test_structure_validator.py
mgmt/validator/validator/: __init__.py  cli.py  config.py  models.py  parser.py
mgmt/validator/validator/reporters/: __init__.py  console.py
mgmt/validator/validator/validators/: __init__.py  base.py  consistency.py  external.py  headlines.py  links.py  structure.py  tags.py  template.py
notes/: 2024-04-14-12-06-16-annual-research-progress-report-2023.org  2024-05-31-08-25-33-heat-capacities.org  2024-06-08-13-08-39-orthogonality.org  2024-10-25-06-23-15-redacted-interview-knowledge.org  2024-11-02-23-10-49-solutions-sen-problems-in-qm.org  2024-11-09-10-09-08-notes-bishop-dlfc.org  2025-01-30-15-28-04-design-patterns.org  2025-01-31-21-01-07-decorator-pattern.org  2025-02-06-15-49-06-simple-component-pattern.org  2025-02-06-16-04-26-error-kernel-pattern.org  2025-02-06-16-05-15-let-it-crash-pattern.org  2025-02-06-17-21-15-active-passive-replication-pattern.org  2025-02-06-17-30-26-multiple-master-replication-pattern.org  2025-02-06-19-45-15-active-active-replication-pattern.org  2025-02-06-19-59-02-resource-loan-pattern.org  (+78 more)
(+1304 files in other folders)
